# tts-webapp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml  requirements.txt  start.sh
scripts/: benchmark.py  download_models.py
src/: __init__.py  config.py  main.py
src/api/routes/: __init__.py  books.py  health.py  tts.py
src/api/schemas/: __init__.py  books.py  tts.py
src/core/: __init__.py  cache.py  provider_manager.py  tts_engine.py
src/core/books/: __init__.py  gutenberg.py  parser.py  store.py
src/core/providers/: __init__.py  base.py  edge.py  elevenlabs.py  openai.py
src/static/: index.html
src/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_health.py  test_tts.py
