[project]
name = "tts-service"
version = "1.0.0"
description = "Production-ready Text-to-Speech API with multi-provider support"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["tts", "text-to-speech", "edge-tts", "fastapi", "api"]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "edge-tts>=6.1.0",
    "httpx>=0.26.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.6",
    "prometheus-fastapi-instrumentator>=6.1.0",
    "structlog>=24.1.0",
    "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
gpu = [
    "torch>=2.1.0",
]
cpu = [
    "onnxruntime>=1.16.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
